Update hero images and restore hover effects

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- SEO Meta Tags -->
-    <title>Biuro Rachunkowe Bydgoszcz | Księgowa Nakielska 156 | Pełna Księgowość</title>
-    <meta name="description" content="Profesjonalne biuro rachunkowe w Bydgoszczy przy ul. Nakielskiej 156. Pełna księgowość, KPiR, kadry i płace, doradztwo podatkowe. Certyfikat MF, ubezpieczenie OC. Zadzwoń: 694 908 338">
-    <meta name="keywords" content="biuro rachunkowe bydgoszcz, księgowa bydgoszcz nakielska, pełna księgowość bydgoszcz, obsługa kadr i płac bydgoszcz, księgowość dla spółek bydgoszcz, doradca podatkowy bydgoszcz">
+    <title>Biuro Rachunkowe Bydgoszcz – Kompleksowa Księgowość i Kadry | Nakielska 156</title>
+    <meta name="description" content="Biuro Rachunkowe Bydgoszcz ul. Nakielska 156 – pełna księgowość, KPiR, ryczałt, kadry i płace. Rozliczenia CIT, PIT, VAT, ZUS. Certyfikat Ministra Finansów, ubezpieczenie OC. Tel: 694 908 338">
+    <meta name="keywords" content="biuro rachunkowe bydgoszcz, księgowa bydgoszcz nakielska, pełna księgowość bydgoszcz, obsługa kadr i płac bydgoszcz, księgowość dla spółek bydgoszcz, doradca podatkowy bydgoszcz, ryczałt bydgoszcz, KPiR bydgoszcz, CIT, PIT, VAT, ZUS, Księga Przychodów i Rozchodów">
     <meta name="author" content="Biuro Rachunkowe Księgowa Dla Ciebie">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://biuro-rachunkowe-ksiegowa.vercel.app/">
@@ -15,14 +15,14 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://biuro-rachunkowe-ksiegowa.vercel.app/">
-    <meta property="og:title" content="Biuro Rachunkowe Bydgoszcz | Księgowa Nakielska 156">
-    <meta property="og:description" content="Profesjonalne biuro rachunkowe w Bydgoszczy. Pełna księgowość, kadry i płace, doradztwo podatkowe. Certyfikat MF, ubezpieczenie OC.">
+    <meta property="og:title" content="Biuro Rachunkowe Bydgoszcz – Kompleksowa Księgowość i Kadry">
+    <meta property="og:description" content="Profesjonalne biuro rachunkowe w Bydgoszczy ul. Nakielska 156. Pełna księgowość, KPiR, ryczałt, kadry i płace. Rozliczenia CIT, PIT, VAT, ZUS. Certyfikat MF.">
     <meta property="og:locale" content="pl_PL">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Biuro Rachunkowe Bydgoszcz | Księgowa Nakielska 156">
-    <meta name="twitter:description" content="Profesjonalne biuro rachunkowe w Bydgoszczy. Pełna księgowość, kadry i płace, doradztwo podatkowe.">
+    <meta name="twitter:title" content="Biuro Rachunkowe Bydgoszcz – Kompleksowa Księgowość i Kadry">
+    <meta name="twitter:description" content="Biuro rachunkowe Bydgoszcz Nakielska 156. Pełna księgowość, KPiR, ryczałt, kadry i płace. CIT, PIT, VAT, ZUS.">
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%231a2b3c' rx='20' width='100' height='100'/><text x='50' y='70' font-family='sans-serif' font-size='60' font-weight='bold' fill='%23c9a227' text-anchor='middle'>K</text></svg>">
@@ -70,34 +70,38 @@
       },
       "hasOfferCatalog": {
         "@type": "OfferCatalog",
-        "name": "Usługi księgowe",
+        "name": "Usługi księgowe Bydgoszcz",
         "itemListElement": [
           {
             "@type": "Offer",
             "itemOffered": {
               "@type": "Service",
-              "name": "Pełna Księgowość"
+              "name": "Pełna Księgowość",
+              "description": "Prowadzenie ksiąg rachunkowych, rozliczenia CIT i VAT dla spółek"
             }
           },
           {
             "@type": "Offer",
             "itemOffered": {
               "@type": "Service",
-              "name": "KPiR i Ryczałt"
+              "name": "Księga Przychodów i Rozchodów (KPiR)",
+              "description": "Obsługa JDG, KPiR, ryczałt ewidencjonowany, rozliczenia PIT"
             }
           },
           {
             "@type": "Offer",
             "itemOffered": {
               "@type": "Service",
-              "name": "Kadry i Płace"
+              "name": "Obsługa Kadr i Płac",
+              "description": "Listy płac, rozliczenia ZUS, PFRON, dokumentacja pracownicza"
             }
           },
           {
             "@type": "Offer",
             "itemOffered": {
               "@type": "Service",
-              "name": "Doradztwo Podatkowe"
+              "name": "Podatki i Doradztwo",
+              "description": "Rozliczenia CIT, PIT, VAT, optymalizacja podatkowa"
             }
           }
         ]
