--- a/index.html
+++ b/index.html
@@ -1,49 +1,55 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- SEO Meta Tags -->
-    <title>Biuro Rachunkowe Bydgoszcz – Kompleksowa Księgowość i Kadry | Nakielska 156</title>
-    <meta name="description" content="Biuro Rachunkowe Bydgoszcz ul. Nakielska 156 – pełna księgowość, KPiR, ryczałt, kadry i płace. Rozliczenia CIT, PIT, VAT, ZUS. Certyfikat Ministra Finansów, ubezpieczenie OC. Tel: 694 908 338">
-    <meta name="keywords" content="biuro rachunkowe bydgoszcz, księgowa bydgoszcz nakielska, pełna księgowość bydgoszcz, obsługa kadr i płac bydgoszcz, księgowość dla spółek bydgoszcz, doradca podatkowy bydgoszcz, ryczałt bydgoszcz, KPiR bydgoszcz, CIT, PIT, VAT, ZUS, Księga Przychodów i Rozchodów">
-    <meta name="author" content="Biuro Rachunkowe Księgowa Dla Ciebie">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://biuro-rachunkowe-ksiegowa.vercel.app/">
+  <!-- SEO Meta Tags -->
+  <title>Księgowa dla Ciebie | Izabela Romańska | Biuro Rachunkowe Bydgoszcz</title>
+  <meta name="description"
+    content="KSIĘGOWA DLA CIEBIE – Izabela Romańska. Biuro Rachunkowe Bydgoszcz ul. Głogowska 20E/2. Pełna księgowość, KPiR, ryczałt, kadry i płace. Rozliczenia CIT, PIT, VAT, ZUS. Certyfikat MF, ubezpieczenie OC. Tel: 694 908 338">
+  <meta name="keywords"
+    content="biuro rachunkowe bydgoszcz, księgowa bydgoszcz, Izabela Romańska księgowa, pełna księgowość bydgoszcz, obsługa kadr i płac bydgoszcz, księgowość dla spółek bydgoszcz, doradca podatkowy bydgoszcz, ryczałt bydgoszcz, KPiR bydgoszcz, CIT, PIT, VAT, ZUS, Księga Przychodów i Rozchodów">
+  <meta name="author" content="Izabela Romańska – KSIĘGOWA DLA CIEBIE">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://biuro-rachunkowe-ksiegowa.vercel.app/">
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://biuro-rachunkowe-ksiegowa.vercel.app/">
-    <meta property="og:title" content="Biuro Rachunkowe Bydgoszcz – Kompleksowa Księgowość i Kadry">
-    <meta property="og:description" content="Profesjonalne biuro rachunkowe w Bydgoszczy ul. Nakielska 156. Pełna księgowość, KPiR, ryczałt, kadry i płace. Rozliczenia CIT, PIT, VAT, ZUS. Certyfikat MF.">
-    <meta property="og:locale" content="pl_PL">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://biuro-rachunkowe-ksiegowa.vercel.app/">
+  <meta property="og:title" content="Księgowa dla Ciebie | Izabela Romańska | Biuro Rachunkowe Bydgoszcz">
+  <meta property="og:description"
+    content="KSIĘGOWA DLA CIEBIE – Izabela Romańska. Biuro Rachunkowe Bydgoszcz ul. Głogowska 20E/2. Pełna księgowość, kadry i płace, rozliczenia CIT, PIT, VAT, ZUS.">
+  <meta property="og:locale" content="pl_PL">
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Biuro Rachunkowe Bydgoszcz – Kompleksowa Księgowość i Kadry">
-    <meta name="twitter:description" content="Biuro rachunkowe Bydgoszcz Nakielska 156. Pełna księgowość, KPiR, ryczałt, kadry i płace. CIT, PIT, VAT, ZUS.">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Księgowa dla Ciebie | Izabela Romańska | Biuro Rachunkowe Bydgoszcz">
+  <meta name="twitter:description"
+    content="KSIĘGOWA DLA CIEBIE – Biuro Rachunkowe Bydgoszcz. Pełna księgowość, kadry i płace. CIT, PIT, VAT, ZUS.">
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%231a2b3c' rx='20' width='100' height='100'/><text x='50' y='70' font-family='sans-serif' font-size='60' font-weight='bold' fill='%23c9a227' text-anchor='middle'>K</text></svg>">
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml"
+    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%231a2b3c' rx='20' width='100' height='100'/><text x='50' y='65' font-family='sans-serif' font-size='40' font-weight='bold' fill='%23c9a227' text-anchor='middle'>IR</text></svg>">
 
-    <!-- Preconnect to fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Preconnect to fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <!-- Schema.org Structured Data -->
-    <script type="application/ld+json">
+  <!-- Schema.org Structured Data -->
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "AccountingService",
-      "name": "Biuro Rachunkowe Księgowa Dla Ciebie",
+      "name": "KSIĘGOWA DLA CIEBIE – Izabela Romańska",
       "alternateName": "Księgowa Dla Ciebie Bydgoszcz",
-      "description": "Profesjonalne biuro rachunkowe w Bydgoszczy oferujące pełną księgowość, obsługę kadr i płac oraz doradztwo podatkowe.",
+      "description": "KSIĘGOWA DLA CIEBIE – Izabela Romańska. Profesjonalne biuro rachunkowe w Bydgoszczy oferujące pełną księgowość, obsługę kadr i płac oraz doradztwo podatkowe.",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "ul. Nakielska 156, I piętro",
+        "streetAddress": "ul. Głogowska 20E/2",
         "addressLocality": "Bydgoszcz",
-        "postalCode": "85-391",
+        "postalCode": "85-000",
         "addressCountry": "PL"
       },
       "geo": {
@@ -53,7 +59,7 @@
       },
       "url": "https://biuro-rachunkowe-ksiegowa.vercel.app",
       "telephone": "+48694908338",
-      "email": "biuro@ksiegowadlaciebie.pl",
+      "email": "kdc.izabela@gmail.com",
       "priceRange": "$$",
       "image": "https://biuro-rachunkowe-ksiegowa.vercel.app/hero-workspace.png",
       "openingHoursSpecification": [
@@ -109,8 +115,8 @@
     }
     </script>
 
-    <!-- Import Map for ES Modules -->
-    <script type="importmap">
+  <!-- Import Map for ES Modules -->
+  <script type="importmap">
     {
       "imports": {
         "react": "https://esm.sh/react@^19.2.4",
@@ -121,42 +127,50 @@
     }
     </script>
 
-    <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="/index.css">
+  <!-- Main Stylesheet -->
+  <link rel="stylesheet" href="/index.css">
 
-    <!-- Inline Critical Styles -->
-    <style>
-        /* Prevent FOUC */
-        body {
-            opacity: 0;
-            animation: fadeIn 0.3s ease-in-out 0.1s forwards;
-        }
-        @keyframes fadeIn {
-            to { opacity: 1; }
-        }
+  <!-- Inline Critical Styles -->
+  <style>
+    /* Prevent FOUC */
+    body {
+      opacity: 0;
+      animation: fadeIn 0.3s ease-in-out 0.1s forwards;
+    }
 
-        /* Loading state */
-        #root:empty::after {
-            content: '';
-            display: block;
-            width: 40px;
-            height: 40px;
-            border: 3px solid #d9e2ec;
-            border-top-color: #1a2b3c;
-            border-radius: 50%;
-            animation: spin 0.8s linear infinite;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-        @keyframes spin {
-            to { transform: translate(-50%, -50%) rotate(360deg); }
-        }
-    </style>
+    @keyframes fadeIn {
+      to {
+        opacity: 1;
+      }
+    }
+
+    /* Loading state */
+    #root:empty::after {
+      content: '';
+      display: block;
+      width: 40px;
+      height: 40px;
+      border: 3px solid #d9e2ec;
+      border-top-color: #1a2b3c;
+      border-radius: 50%;
+      animation: spin 0.8s linear infinite;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    @keyframes spin {
+      to {
+        transform: translate(-50%, -50%) rotate(360deg);
+      }
+    }
+  </style>
 </head>
+
 <body class="antialiased">
-    <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+  <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
 </body>
+
 </html>
