--- a/index.html
+++ b/index.html
@@ -23,15 +23,21 @@
     content="KSIĘGOWA DLA CIEBIE – Izabela Romańska. Biuro Rachunkowe Bydgoszcz ul. Głogowska 20E/2. Pełna księgowość, kadry i płace, rozliczenia CIT, PIT, VAT, ZUS.">
   <meta property="og:locale" content="pl_PL">
 
+  <meta property="og:image" content="https://biuro-rachunkowe-ksiegowa.vercel.app/logo.png">
+  <meta property="og:image:alt" content="Księgowa dla Ciebie logo">
+
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Księgowa dla Ciebie | Izabela Romańska | Biuro Rachunkowe Bydgoszcz">
   <meta name="twitter:description"
     content="KSIĘGOWA DLA CIEBIE – Biuro Rachunkowe Bydgoszcz. Pełna księgowość, kadry i płace. CIT, PIT, VAT, ZUS.">
 
+  <meta name="twitter:image" content="https://biuro-rachunkowe-ksiegowa.vercel.app/logo.png">
+  <meta name="twitter:image:alt" content="Księgowa dla Ciebie logo">
+
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml"
-    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%231a2b3c' rx='20' width='100' height='100'/><text x='50' y='65' font-family='sans-serif' font-size='40' font-weight='bold' fill='%23c9a227' text-anchor='middle'>IR</text></svg>">
+  <link rel="icon" type="image/png" href="/logo.png">
+  <link rel="apple-touch-icon" href="/logo.png">
 
   <!-- Preconnect to fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -61,7 +67,7 @@
       "telephone": "+48694908338",
       "email": "kdc.izabela@gmail.com",
       "priceRange": "$$",
-      "image": "https://biuro-rachunkowe-ksiegowa.vercel.app/hero-workspace.png",
+      "image": "https://biuro-rachunkowe-ksiegowa.vercel.app/logo.png",
       "openingHoursSpecification": [
         {
           "@type": "OpeningHoursSpecification",
